--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,8 @@ stages:
     pool: Self
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'docker'
+        repository: 'sinhaish/azurerepo'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
